test/should-fail/vsgc2949n.f3
/**
 * Should-fail test for VSGC-2949 : Range step goes to zero - runtime divide by zero
 *
 * Unbound Number case
 *
 * @test
 * @run
 */

import java.lang.Exception;

var c = 0.0;
try {
  var rs = [1.2 .. 4.5 step c];
  println("BAD");
} catch (exc : Exception) {
  println(exc);
}
